# Mudlet

./: .DirIcon  .gitignore  .gitmodules  ACCESSIBILITY_COMPARISON_FINAL.md  ACCESSIBILITY_HANDOFF_SESSION_2.md  BRANCH_ANALYSIS_RESULTS.md  BRANCH_COMPARISON_A11Y.md  BRANCH_COMPARISON_SUMMARY.md  CMakeLists.txt  COMPARISON_EXECUTIVE_SUMMARY.md  HANDOFF_UPDATE_TOOLTIP_PASS.md  QT_UNDO_MIGRATION_PLAN.md  README.md  SESSION_CONTINUATION_PROMPT.md  TOOLTIP_PASS_COMPREHENSIVE.md  UNDO_FRAMEWORK_EVALUATION.md  UNDO_REDO_IMPLEMENTATION_PLAN.md  fix_tooltip_conflicts.py  mudlet.desktop
.devcontainer/: Dockerfile  devcontainer.json
.github/: CONTRIBUTING.md  README.md  dependabot.yml
.github/workflows/: build-mudlet-win.yml  build-mudlet.yml  clangtidy-diff-analysis.yml  clangtidy-post-comments.yml  codeql-analysis.yml  dangerjs.yml  (+12 more)
CI/: build-mudlet-for-windows.sh  deploy-mudlet-for-windows.sh  fix.grid.ui.ordering.js  package-mudlet-for-windows.sh  register-windows-release.sh  send_debug_files_to_sentry.sh  setup-windows-sdk.sh  travis.linux.after_success.sh  travis.osx.after_success.sh  update-autocompletion.lua
cmake/: FindPCRE2.cmake  IncludeOptionalModule.cmake
docker/: Dockerfile
docs/: CONTRIBUTING.md  ai-instructions.md
src/: ActionUnit.cpp  ActionUnit.h  AliasUnit.cpp  AliasUnit.h  AnnouncerMac.mm  CMakeLists.txt  CameraController.cpp  CameraController.h  CredentialManager.cpp  CredentialManager.h  CustomLineDrawContextMenuHandler.cpp  CustomLineDrawHandler.cpp  CustomLineEditContextMenuHandler.cpp  CustomLineEditHandler.cpp  DarkTheme.cpp  EditorAddItemCommand.cpp  EditorAddItemCommand.h  EditorCommand.h  EditorDeleteItemCommand.cpp  EditorDeleteItemCommand.h  EditorItemXMLHelpers.cpp  EditorItemXMLHelpers.h  EditorModifyPropertyCommand.cpp  EditorModifyPropertyCommand.h  EditorMoveItemCommand.cpp  EditorMoveItemCommand.h  EditorToggleActiveCommand.cpp  EditorToggleActiveCommand.h  EditorUndoStack.cpp  EditorUndoStack.h  EditorUndoSystem.cpp  EditorUndoSystem.h  EditorViewType.h  GeometryManager.cpp  GeometryManager.h  Host.cpp  Host.h  HostManager.cpp  HostManager.h  KeyUnit.cpp  (+186 more)
src/crash_reporter/: CMakeLists.txt  crashReporter.h  main.cpp
test/: CMakeLists.txt  TLuaInterfaceTest.cpp  TMxpStubClient.h  dlgTriggerEditorUndoRedoTest.cpp
translations/: mudlet.ts
(+75 files in other folders)
